wwwroot/css/EditProfile.css
:root {
    --space-xs: 8px;
    --space-sm: 16px;
    --space-md: 24px;
    --space-lg: 32px;
    --space-xl: 48px;
    --space-2xl: 64px;
    --space-paddingout: 72px;

    --text-xs: 12px;
    --text-sm: 18px;
    --text-md: 20px;
    --text-lg: 24px;
    --text-xl: 32px;
    --text-2xl: 40px;
    --text-3xl: 56px;
    --text-4xl: 64px;
}

.text-xs  { font-size: var(--text-xs); line-height: 1.2;}
.text-sm  { font-size: var(--text-sm); line-height: 1.2;}
.text-md  { font-size: var(--text-md); line-height: 1.2;}
.text-lg  { font-size: var(--text-lg); line-height: 1.2;}
.text-xl  { font-size: var(--text-xl); line-height: 1.2;}
.text-2xl { font-size: var(--text-2xl); line-height: 1.2;}
.text-3xl { font-size: var(--text-3xl); line-height: 1.2;}
.text-4xl { font-size: var(--text-4xl); line-height: 1.2;}

.font-semilight  { font-weight: 350; }
.font-regular    { font-weight: 400; }
.font-medium     { font-weight: 500; }
.font-semibold   { font-weight: 600; }
.font-bold       { font-weight: 700; }

.notification {
    position: fixed;
    top: -100px;
    left: 50%;
    transform: translateX(-50%);
    padding: 15px 30px;
    border-radius: 8px;
    color: white;
    font-family: 'Noto Sans Thai', 'Segoe UI', sans-serif;
    z-index: 1000;
    transition: top 0.5s ease-in-out;
    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
    z-index: 9999;
    pointer-events: none;
}

.notification.success { background-color: #00b64cd7; }
.notification.error { background-color: rgb(200, 0, 0); }

.notification.show {
    top: 20px; 
}

.CenterContainer {
    width: 100%;
    min-height: 100vh;
    margin: 0 auto;
    margin-top: -80px;
    padding-top: calc(80px + var(--space-md));
    padding-bottom: calc(80px + var(--space-md));
    display: flex;
    flex-direction: column;
    background: url('/images/EditProfileBackground.jpg') no-repeat;
    background-size: cover;
    box-sizing: border-box;
}

.EditProfileContainer {
    display: flex;
    width: 50vw;
    flex-direction: column;
    margin: 0 auto;
    gap: var(--space-lg);
    align-self: stretch;
}

.EditProfileHeader {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: var(--space-sm);
    align-self: stretch;
    font-size: 24px;
}

.EditProfileLine {
    width: 116px;
    height: 3px;
    background: black;
    border: none;
    margin: 0;
}

.EditFormContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: var(--space-2xl, 64px);
    align-self: stretch;
}

.ProfilePartContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    align-self: stretch;
}

.ProfileSubContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: var(--space-sm);
}

.ProfilePicture {
    display: flex;
    width: 80px;
    height: 80px;
    justify-content: center;
    align-items: center;
    gap: 10px;

    border-radius: 77px;
    background: rgba(217, 217, 217, 0.50);
}

.ProfileImage {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    object-fit: cover;
}

.ProfileImageUpload {
    display: none;
}

.UploadButton {
    display: flex;
    width: 162px;
    height: 44px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: pointer;

    border-radius: 38px;
    border: 1px solid #000;
    background: rgba(217, 217, 217, 0.00);
}

.UploadButtonText {
    display: flex;
    align-items: center;
    gap: var(--space-sm);
}

.UploadIcon {
    width: 16px;
    height: 16px;
    display: flex;
    justify-content: center;
}

.InputFieldsContainer {
    display: flex;
    padding: var(--space-lg) 0;
    flex-direction: column;
    align-items: center;
    gap: var(--space-xl);
    align-self: stretch;
}

.EditInput {
    display: flex;
    padding-bottom: var(--space-md);
    flex-direction: column;
    align-items: flex-start;
    align-self: stretch;
    background: transparent;
    border: none;
    border-bottom: 1px solid #000;
    outline: none;
}

.EditInput::placeholder {
    color: #000000;
    opacity: 1;
}

.ErrorMessage {
    display: block;
    color: rgb(200, 0, 0);
    margin-top: var(--space-xs);
}

.DateAndGenderContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    align-content: center;
    gap: 64px var(--space-2xl);
    align-self: stretch;
    flex-wrap: wrap;
}

.ChoosingContainer {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: var(--space-sm);
}

.ChoosingInputContainer {
    display: flex;
    width: 224px;
    height: 44px;
    padding: 0 var(--space-sm);
    align-items: center;
    justify-content: center;
    gap: 10px;
    flex-shrink: 0;

    border-radius: 18px;
    border: 1px solid #000;
}

.InputSelection {
    border: none;
    background: none;
    outline: none;
    font-family: inherit;
    font-weight: inherit;
    font-size: inherit;
}

.Tags {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: var(--space-lg);
    align-self: stretch;
}

.TagsSubHeader {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: var(--space-sm);
    align-self: stretch;
}

.TagsMainHeader {
    display: flex;
    padding-bottom: var(--space-xs);
    justify-content: center;
    align-items: center;

    border-bottom: 1px solid #000;
}

.TagsContainer {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: var(--space-md);
    align-self: stretch;
}

.TagsRowContainer {
    display: flex;
    align-items: center;
    align-content: center;
    gap: 16px var(--space-sm);
    flex-wrap: wrap;
}

.Tag {
    display: flex;
    padding: var(--space-sm);
    justify-content: center;
    align-items: center;
    gap: var(--space-xs);

    border-radius: 38px;
    border: 1px solid #D9D9D9;
    background: rgba(217, 217, 217, 0.30);
}

.RemoveTagIcon {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 20px;
    height: 20px;
    cursor: pointer;
}

.AddTag {
    display: flex;
    padding: var(--space-xs) var(--space-sm) var(--space-xs) var(--space-sm);
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    border: 1px solid #D9D9D9;
    cursor: pointer;
}

.TagInput {
    display: flex;
    background: rgba(217, 217, 217, 0.30);
    border: 1px solid #D9D9D9;
    border-radius: 38px;
    padding: var(--space-sm);
    outline: none;
    font-size: 14px;
    font-weight: 350;
    text-transform: uppercase;
}

.EditBio {
    display: flex;
    padding: var(--space-sm) 0 var(--space-2xl) 0;
    flex-direction: column;
    align-items: flex-start;
    align-self: stretch;
    border: none;
    background: none;
    border-bottom: 1px solid #000;
    outline: none;
}

.EditBio::placeholder {
    color: #000000;
    opacity: 1;
}

.EditProfileSubmit {
    display: flex;
    padding-top: var(--space-2xl);
    flex-direction: column;
    align-items: center;
    align-self: stretch;
}

.UpdateButton {
    display: flex;
    width: 222px;
    height: 58px;
    padding: var(--space-) var(--space-lg);
    justify-content: center;
    align-items: center;
    border-radius: 50px;
    border: 1px solid #000;
    background: none;
    cursor: pointer;
}

body {
    margin: 0;
    padding: 0;
}

* {
    font-family: 'Noto Sans Thai', 'Segoe UI', sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@media (max-width: 1025px) {
    :root {
        --text-sm: 17px;
        --text-md: 19px;
        --text-lg: 22px;
        --text-xl: 28px;
        --text-2xl: 36px;
        --text-3xl: 48px;
        --text-4xl: 56px;

        --space-xs: 6px;
        --space-sm: 12px;
        --space-md: 20px;
        --space-lg: 28px;
        --space-xl: 40px;
        --space-2xl: 56px;
        --space-paddingout: 32px;
    }

    .EditProfileHeader {
        font-size: 16px;
    }
}

@media (max-width: 768px) {
    :root {
        --text-sm: 16px;
        --text-md: 18px;
        --text-lg: 20px;
        --text-xl: 24px;
        --text-2xl: 32px;
        --text-3xl: 40px;
        --text-4xl: 32px;

        --space-xs: 4px;
        --space-sm: 8px;
        --space-md: 16px;
        --space-lg: 24px;
        --space-xl: 32px;
        --space-2xl: 48px;
        --space-paddingout: 16px;
    }

}

